--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Fortfolio </title>
     <link rel="stylesheet" href="/css/bootstrap.css">
     <link rel="stylesheet" href="main.css">
     <script src="main.js"></script>
@@ -173,7 +173,7 @@
       <div class="col-md-6 p-5 bg-primary text-white">
         <h1>Hi there!</h1>
         <h4>
-          lore ipsumhwei2qtdfodn ch2eifug
+          I am a skilled web developer with a strong interest in web design. Feel free to reach out for any inquiries or collaborations!
         </h4>
       </div>
       <div class="col-md-6 py-3">
